<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"

    tools:context="com.perrete.votoperro.Visor">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="413dp"
        android:layout_below="@+id/image_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="-54dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:src="@drawable/perro" />

    <TextView
        android:id="@+id/image_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/opiniones_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="-2dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_hermoso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/RB1" />

        <RadioButton
            android:id="@+id/radio_lindo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RB2" />

        <RadioButton
            android:id="@+id/radio_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RB3" />

        <RadioButton
            android:id="@+id/radio_horroroso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RB4" />
    </RadioGroup>

    <Button
        android:id="@+id/send_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="31dp"
        android:layout_toEndOf="@+id/opiniones_group"
        android:layout_toRightOf="@+id/opiniones_group"
        android:text="@string/SB1" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="1dp"
        android:layout_toEndOf="@+id/opiniones_group"
        android:layout_toRightOf="@+id/opiniones_group"
        android:onClick="cambio"
        android:text="@string/BCambio" />
</RelativeLayout>